# CMAKE-study

./: LICENSE  README.md
content/v1/: CMakeLists.txt
content/v1/src/: sub.cpp
content/v2/: CMakeLists.txt
content/v3/: app
content/v3/include/: head.h
content/v4/: CMakeLists.txt  app
content/v5/: CMakeLists.txt
content/v5/app/: CMakeLists.txt  app.cpp
content/v5/calc/: CMakeLists.txt  calc.cpp
content/v5/check/: CMakeLists.txt  check.cpp
content/v5/include/: head.h
v1/: run
v1/src/: add.cpp  main.cpp
v3/: CMakeLists.txt
v3/lib/: libcalc.dylib
